...
    
    func showQuizResultAlert(result: QuizResultsViewModel) {
        let alertModel = AlertModel(
            title: result.title,
            message: result.text,
            buttonText: result.buttonText,
            accessibilityIdentifier: "GameResults") {
                [weak self] in
                guard let self = self else { return }
                
                self.presenter.resetGameData()
                self.presenter.requestNextQuestion()
            }
...
